k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: certbot-service
            port:
              number: 80
      - path: /(adminsdk(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: adminsdk-service
            port:
              number: 8010
      - path: /(git(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: git-activity-fetcher-service
            port:
              number: 3000
      - path: /(expenses(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: expenses-service
            port:
              number: 3001
      - path: /(organization(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: organization-service
            port:
              number: 3002 
      - path: /(timesheet(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: timesheet-service
            port:
              number: 3003
      - path: /(payments(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 3005
      - path: /(conversion(/|$)(.*))
        pathType: Prefix
        backend:
          service:
            name: conversion-service
            port:
              number: 3006
  tls:
  - hosts:
    - dev.aurora-udes.tech
    secretName: your-tls-secret
